--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.2.4",
 	"appid": "wxd79425679d3a4a25",
-	"projectname": "tbapp",
+	"projectname": "moguapp",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
